<?xml version="1.0" encoding="utf-8"?>
<!-- 文本操作栏 -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/addTextBar"
    android:layout_width="wrap_content"
    android:layout_height="40dp"
    android:orientation="horizontal"
    android:padding="6dp"
    android:gravity="center_vertical"
    android:background="#66000000">

    <EditText
        android:id="@+id/textInput"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:background="@drawable/bg_addtext_textinput"
        android:hint="@string/textInput"/>

    <!-- 分隔线 -->
    <View
        android:layout_width="2dp"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="20dp"
        android:background="#CCCCCC" />

    <!--调节文字大小-->
    <SeekBar
        android:id="@+id/textSizeSeekBar"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:max="200"
        android:progress="40"
        android:progressTint="@color/white"
        android:thumb="@drawable/seekbar_thumb"/>

    <Spinner
        android:id="@+id/fontPicker"
        android:layout_width="150dp"
        android:layout_height="match_parent"
        android:background="@drawable/bg_addtext_fontpicker"
        android:prompt="@string/fontPicker"/>

    <!-- 分隔线 -->
    <View
        android:layout_width="2dp"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="20dp"
        android:background="#CCCCCC" />

    <ImageButton
        android:id="@+id/btnIsBold"
        style="@style/AddTextToolButtonStyle"
        android:src="@drawable/ic_addtext_unbold"
        android:contentDescription="@string/IsBold"/>

    <ImageButton
        android:id="@+id/btnIsItalic"
        style="@style/AddTextToolButtonStyle"
        android:src="@drawable/ic_addtext_unitalic"
        android:contentDescription="@string/IsItalic"/>

    <ImageButton
        android:id="@+id/btnColor"
        style="@style/AddTextToolButtonStyle"
        android:src="@drawable/ic_addtext_uncolorpick"
        android:contentDescription="@string/ColorPicker"/>

    <ImageButton
        android:id="@+id/btnAddTextDone"
        style="@style/AddTextToolButtonStyle"
        android:src="@drawable/ic_addtext_done"
        android:contentDescription="@string/AddTextDone"/>


</LinearLayout>